--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .botao {
-  background-color: #776B5D;
+  background-color: #647E68;
   font-size: 20px;
   border-style: none;
   width: 50px;
