--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .botao {
-  background-color: #647E68;
+  background-color: #272121;
   font-size: 20px;
   border-style: none;
   width: 50px;
@@ -31,7 +31,7 @@ body {
 }
 
 .botao-cinza {
-    background-color: #C9DABF;
+    background-color: #363333;
 }
 
 .botao-laranja {
